Added endpoints to get single entities by /[resource type]/[id]. Applies to the following entities: Activity, Person, Group, Duties, Organisations. Updated openapi.yml for exposed endpoints. Small corrections in README.md. Upgraded to Java 21.
